# ProcessDistro

./: Cargo.toml  README.md  task_logs.json
common/: Cargo.toml
common/proto/: protocol_schema.json
common/src/: errors.rs  lib.rs  protocol.rs  types.rs
controller/: Cargo.toml  README.md  task_logs.json
controller/src/: aggregator.rs  cli.rs  controller_manager.rs  fault_tolerance.rs  main.rs  metrics.rs  network.rs  node_manager.rs  scheduler.rs  security.rs  test_network_discovery.rs  web_main.rs  web_server.rs
controller/static/: dashboard.css  dashboard.html  dashboard.js  mandelbrot.wasm  password_hash.wasm
documentation/: overview.md  real-time-updates.md  web-interface-guide.md
edge_node/: Cargo.toml  README.md
edge_node/src/: communication.rs  downloader.rs  executor.rs  main.rs  monitor.rs  sandbox.rs
examples/: README.md  basic_usage.rs  network_discovery_example.rs
scripts/: README.md  build_all.ps1  test_all.ps1
src/: main.rs
tools/: README.md  benchmark.py  node_simulator.py
wasm_tasks/mandelbrot/: Cargo.toml
wasm_tasks/mandelbrot/src/: lib.rs
wasm_tasks/matrix_mul/: Cargo.toml
wasm_tasks/matrix_mul/src/: lib.rs
wasm_tasks/password_hash/: Cargo.toml
wasm_tasks/password_hash/src/: lib.rs
