[package]
name = "edge_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edge_node"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# WASM runtime dependencies
wasmtime = "25.0"
wasmtime-wasi = "25.0"

# System monitoring
sysinfo = "0.30"