[package]
name = "password_hash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.bcrypt]
version = "0.15"
features = ["std"]